Fix overflow when above is select

--- a/content/plugins/hashcore-widgets-bundle/widgets/image-button/styles/image-button.less
+++ b/content/plugins/hashcore-widgets-bundle/widgets/image-button/styles/image-button.less
@@ -85,7 +85,8 @@
 
       &-description {
         font-size: @description_size;
-        margin: 0
+        margin: 0;
+        overflow: hidden;
       }
     }
   }
